update authentication and remove key